--- a/Exercise_3/index.html
+++ b/Exercise_3/index.html
@@ -24,6 +24,8 @@
       </table>
 
       <input type="button" value="calc" onclick="addNumbers()" />
+
+      <p><a href="./calculator.html">Calculator (Part 2)</a></p>
     </div>
   </body>
 </html>
